kubernetes/apps/aria2-ui/app/deployment.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name aria2-ui
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
  template:
    metadata:
      name: *name
    spec:
      containers:
        - name: *name
          image: wahyd4/aria2-ui:6.2.2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: &config config
              mountPath: /app/conf/
            - name: &data data
              mountPath: /data/
            - name: &database database
              mountPath: /app/filebrowser.db
              subPath: filebrowser.db
      volumes:
        - name: *config
          secret:
            secretName: aria2-ui-config
            optional: false
            defaultMode: 0o777
        - name: *data
          persistentVolumeClaim:
            claimName: aria2-ui-data
        - name: *database
          persistentVolumeClaim:
            claimName: aria2-ui-database
