kubernetes/apps/aria2-ui/app/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/service.json
apiVersion: v1
kind: Service
metadata:
  name: &name aria2-ui
spec:
  selector:
    app.kubernetes.io/name: *name
  ports:
    - name: main
      port: 80
    - name: rclone
      port: 5572
    - name: filebrowser
      port: 8080
    - name: rpc
      port: 6800
