kubernetes/apps/aria2-ui/app/idvn.http-route.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: idvn-aria2-ui-http
spec:
  parentRefs:
    - name: gateway-idvn-public
      sectionName: http
      namespace: gateway-api
  hostnames:
    - aria2-ui.${IDVN_DOMAIN}
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: idvn-aria2-ui-https
spec:
  parentRefs:
    - name: gateway-idvn-public
      sectionName: https
      namespace: gateway-api
  hostnames:
    - aria2-ui.${IDVN_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: aria2-ui
          port: 80
